created main page

--- a/src/component/button/Button.css
+++ b/src/component/button/Button.css
@@ -7,8 +7,7 @@
     cursor: pointer;
 }
 
-p{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+.button{
     text-align: center;
     font-size: 30px;
 }
