リザルトページの作成+苦手な質問を表示

--- a/src/component/mainView/mainView.css
+++ b/src/component/mainView/mainView.css
@@ -31,9 +31,10 @@ img{
 
 .evaluationButton{
     width: 150px;
-    margin: 0 5px;
+    margin: 0 20px;
     border: solid 1px;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .evaluationButton > p{
